Chapter6 firsr commit

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,9 +5,10 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",   about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
+      <li><%= link_to t(".ab"), about_path %></li>
+      <li><%= link_to t(".ct"), contact_path %></li>
+      <li><%= link_to t(".n"), Settings.static_page.mainpage %></li>
+      <li><%= link_to t(".git"), Settings.static_page.github %></li>
     </ul>
   </nav>
 </footer>
