--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
+    <%= link_to t(".sp"), root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home",   root_path %></li>
-        <li><%= link_to "Help",   help_path %></li>
-        <li><%= link_to "Log in", new_path %></li>
+        <li><%= link_to t(".h"),  root_path %></li>
+        <li><%= link_to t(".he"), help_path %></li>
+        <li><%= link_to t(".lg"), new_path %></li>
       </ul>
     </nav>
    </div>
