--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -1,3 +1,3 @@
-<% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
-<p>This will be a signup page for new users.</p>
+<h1><%= t(".hello") %></h1>
+<h1><%= t(".full_name") %></h1>
+<h1><%= t(".ror") %></h1>
