--- a/app/views/static_page/contact.html.erb
+++ b/app/views/static_page/contact.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Contact') %>
-<h1>Contact</h1>
+<h1><%= t ".title" %></h1>
 <p>
-  Contact the Ruby on Rails Tutorial about the sample app at the
   <%= link_to t(".title"), Settings.static_page.contact %>
 </p>
+
