--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -1,12 +1,11 @@
 <div class="center jumbotron">
-  <h1><%= t(".wts") %></h1>
-  <% provide(:title, 'Home') %>
+  <h1><%= t ".welcome" %></h1>
   <h2>
-    This is the home page for the
-    <%= link_to t(".ror"), Settings.static_page.mainpage %></a>
+    <% t ".rubyt" %>
+    <%= link_to t(".ruby"), Settings.static_page.mainpage %></a>
     sample application.
   </h2>
-  <%= link_to "Sign up now!", new_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to t(".signup"), signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 <%= link_to image_tag("rails.png", alt: "Rails logo"), Settings.static_page.mainpage %>
 
